# ncnn_optee

./: Android.mk  CMakeLists.txt  README.md  benchncnn.cpp  bugs.md  实验数据.md
src/: CMakeLists.txt
src/layer/: batchnorm.cpp
src/layer/arm/: dropout_arm.cpp  dropout_arm.h  flatten_arm.cpp  flatten_arm.h  scale_arm.cpp  scale_arm.h
src/layer/teec/: batchnorm_teec.cpp  batchnorm_teec.h  batchnorm_teec_ta_defines.h  debug.h  dropout_teec.cpp  dropout_teec.h  dropout_teec_ta_defines.h  flatten_teec.cpp  flatten_teec.h  flatten_teec_ta_defines.h  lrn_teec.cpp  lrn_teec.h  lrn_teec_ta_defines.h  pooling_teec.cpp  pooling_teec.h  pooling_teec_ta_defines.h  relu_teec.cpp  relu_teec.h  relu_teec_ta_defines.h  scale_teec.cpp  scale_teec.h  scale_teec_ta_defines.h  softmax_teec.cpp  softmax_teec.h  softmax_teec_ta_defines.h  teec.cpp  teec.h  teec_ta_defines.h
ta/: Android.mk  Makefile  ncnn_ta.c  sub.mk  test.c  test.h  user_ta_header_defines.h
ta/include/: ncnn_ta.h
ta/layer/: batchnorm_ta.c  batchnorm_teec_ta_defines.h  debug.h  dropout_ta.c  dropout_teec_ta_defines.h  flatten_ta.c  flatten_teec_ta_defines.h  layer.h  layer_registered.h  lrn_ta.c  lrn_teec_ta_defines.h  math.c  math.h  math_quick.c  math_quick.h  pooling_ta.c  pooling_teec_ta_defines.h  relu_ta.c  relu_teec_ta_defines.h  scale_ta.c  scale_teec_ta_defines.h  softmax_ta.c  softmax_teec_ta_defines.h  teec_ta_defines.c  teec_ta_defines.h
